# merge-doctor

./: README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  vite.config.ts
src/: index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: custom.rs  git.rs  mod.rs
src-tauri/src/config/: types.rs
src-tauri/src/executors/: local.rs  mod.rs  ssh.rs
src-tauri/src/manager/: custom_command_manager.rs  git_manager.rs  mod.rs
src/components/forms/: add-remote-repository.tsx  utils.ts
src/components/layout/: app-layout.tsx  section-layout.tsx
src/components/layout/navigation/: sidebar.tsx  topbar.tsx
src/components/presentation/: diff-file-list.tsx  diff-renderer.tsx  file-filter-controls.tsx  repository-homepage-card.tsx  utils.ts
src/components/presentation/diff/: diff-file-list.tsx  diff-renderer.tsx  file-tree.tsx  tokenise.ts
src/components/shadcn/: button.tsx  card.tsx  data-state-interpreter.tsx  input.tsx  label.tsx  navigation-menu.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tabs.tsx
src/components/styling/: field-label-container.tsx  form-container.tsx  styling-util-types.tsx
src/constants/: local-storage-keys.ts  routes.ts
src/context/: diff-context.tsx
src/controllers/: remote-repository.ts
src/hooks/: sidebar.tsx  use-file-filter.tsx  use-set.tsx
src/pages/: add-repository.tsx  landing.tsx  remote-repository.tsx
src/types/: repository.ts  tauri.ts
src/types/__generated__/: invoke.d.ts
(+2 files in other folders)
